--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src ="javascript.js" defer></script>
 </head>
 <body>
+
+<!--work 3/24/2025 DOM manipulation exercise add HTMl elements only using JS-->
+
+
 
     <script>
 
@@ -123,6 +128,8 @@ console.log(leapYears(1996));
 
 */
 
+/*
+
 const convertToCelsius = function(tempF) {
 
 let resultC = (tempF - 32) * (5/9);
@@ -132,7 +139,11 @@ return resultC;
 };
 
 console.log(convertToCelsius(32));
+
+*/
     </script>
+
+
 
 </body>
 
