--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
+<h1>THE TITLE OF YOUR WEBPAGE</h1>
+<div id="container"></div>
+
 <!--work 3/24/2025 DOM manipulation exercise add HTMl elements only using JS-->
 
-
-
-    <script>
+<script>
 
         /* const reverseString = function(str) {
             let splitString = str.split("");
@@ -141,7 +142,7 @@ return resultC;
 console.log(convertToCelsius(32));
 
 */
-    </script>
+</script>
 
 
 
