--- a/index_02.html
+++ b/index_02.html
@@ -10,6 +10,19 @@
 
     <h1>THE TITLE OF YOUR WEBPAGE</h1>
     <div id="container"></div>
+
+    <!--3-26-25-->
+    <button id="btn">Click Me</button>
+    <button id="btnTwo">Click Me too</button>
+
+    <div id="container">
+        <button id="one">Click Me</button>
+        <button id="two">Click Me</button>
+        <button id="three">Click Me</button>
+      </div>
+      
+
+
     
 </body>
 </html>
